# vrijopnaam-prices

./: .gitignore  __init__.py  dynamic_prices.py  dynamic_pricing_parser.py  get_vrijopnaam_prices.py  parse_utils.py  pyproject.toml  readme.md  requirements.txt  setup.py  vrijopnaam.py  vrijopnaam_electricity_price.py  vrijopnaam_prices.py  vrijopnaam_session.py
.github/workflows/: pylint.yml
vrijopnaam_prices/: __init__.py  _dynamic_pricing_parser.py  _parse_utils.py  _vrijopnaam.py  _vrijopnaam_session.py  day_price.py  dynamic_price.py  dynamic_prices.py  dynamic_pricing_parser.py  get_vrijopnaam_prices.py  prices.py  time_bounded_price.py  vrijopnaam.py  vrijopnaam_prices.py  vrijopnaam_session.py
