[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.poetry.scripts]
get_vrijopnaam_prices = "get_vrijopnaam_prices:start"

[tool.setuptools]
packages = "find:"

[project]
name = "vrijopnaam-prices"
version = "0.1"
description = "Commandline tool/library to fetch gas/electricity prices from https://vrijopnaam.app/"
authors = [
    { name = "Marc Dirven" }
]
dependencies = [
    "beautifulsoup4==4.12.3",
    "aiohttp==3.9.3",
    "python-dateutil==2.9.0.post0"
]
