[build-system]
requires-python = ">=3.10"
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["vrijopnaam_prices"]

[project]
name = "vrijopnaam-prices"
version = "0.1"
description = "Commandline tool/library to fetch gas/electricity prices from https://vrijopnaam.app/"
authors = [
    { name = "Marc Dirven" }
]
dependencies = [
    "beautifulsoup4==4.12.3",
    "aiohttp==3.9.3",
    "python-dateutil==2.9.0.post0"
]

[project.scripts]
get-vrijopnaam-prices = "vrijopnaam_prices.get_vrijopnaam_prices:start"